styles/global/header.scss
#header-main {
  padding: 22px 18px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: absolute;
  top: 0;
  background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 55%, rgba(0,0,0,0) 100%);
  z-index: 2;
  width: 100%;

  @media (min-width: 992px) {
    padding: 53px 58px;
    align-items: flex-end;
  }

  // Inline version - the version that sits within the document flow, and sits atop a white background
  &.nav-inline {
    position: relative;
    
    #header-logo #ComponentsNavLogo{
      fill: $red;
    }
    
    .header-nav-link, .header-nav-toggle {
      color: $black;
    }

    .header-nav-toggle .icon-bar {
      background-color: $darkestgrey;
    }
  }
  

  // Mobile - when the Nav is open
  &.nav-active {
    z-index: 12;

    #header-logo #ComponentsNavLogo{
      fill: $red;
    }

    .header-logo-link {
      z-index: 2;
    }
    
    .header-nav-toggle {
      color: $black;
      position: relative;
      z-index: 2;
    }
  }
}

// EH Logo in the header
.header-logo-link {
  position: relative;
}

#header-logo {
  max-width: 86px;
  width: 100%;
  height: auto;
  @media (min-width: 992px) {
    max-width: none;
  }
}


// the mobile transition needs some polish for sure
.header-nav {
  line-height: 1;
  position: absolute;
  top: 0;
  left: -100%;
  width: 100%;
  background: $lightgrey;
  height: 100vh;
  transition: transform 0.5s ease-in-out;
  padding-top: 70px;
  
  &.active {
    transform: translateX(100%);
    transition: transform 0.5s ease-in-out;
  }

  @media (min-width: 992px) {
    position: relative;
    top: auto;
    left: auto;
    background: none;
    height: auto;
    padding-top: 0;
  }
  
}

.header-nav-link {
  display: block;
  color: $black;
  line-height: 1;
  margin: 20px 42px 20px 64px;
  text-transform: uppercase;
  font-size: 0.9rem;
  letter-spacing: 1px;
  font-weight: 500;
  position: relative;
  
  
  &:last-of-type {
    margin-right: 0;
  }

  // animated bottom border
  &:after {
    display: block;
    content: '';
    border-bottom: solid 2px currentColor;
    transform: scaleX(0);
    transition: transform 250ms ease-in-out;
    position: absolute;
    width: 100%;
    bottom: -5px;
    left: 0;
  }

  &:hover {
    text-decoration: none;
    @media (min-width: $desktop) {
      color: $black;

      &:after {
        transform: scaleX(1);
      } 
    }
  }
  
  &.active {
    
    @media (min-width: $desktop) {
      &:after {
        transform: scaleX(1);
      } 
    }
    
    span {
      border-bottom: 2px solid $red;
      @media (min-width: $desktop) {
        border-bottom-width: 0;
      }
    }
  }

  @media (min-width: 992px) {
    display: inline-block;
    color: $white;
    margin: 0 25px 0 0;

    &:hover {
      color: $white;
    }
  }
  
  @media (min-width: $desktop-large) {
    margin: 0 53px 0 0;
  }
}

// Nav toggle - only shows up on mobile
.header-nav-toggle {
  display: block;
  border: none;
  outline: none;
  background: none;
  color: $white;
  height: 21px;
  margin-bottom: -9px;
  
  @media (min-width: 992px) {
    display: none;
  }
  
  
  .icon-bar {
    width: 22px;
    height: 2px;
    background-color: $white;
    transform: rotate(0deg);
    display: block;
    
    &:nth-of-type(2) {
      margin-top: -8px;
    }

    &:nth-of-type(3) {
      margin-top: 10px;
    }
  }
  
  &.active {
    .icon-bar:nth-of-type(1) {
      animation: dissappear 0.5s ease;
      animation-fill-mode: forwards;
      background-color: $darkestgrey;
    }
    .icon-bar:nth-of-type(2) {
      animation: squishTop 0.5s ease;
      animation-fill-mode: forwards;
      background-color: $darkestgrey;
    }
    .icon-bar:nth-of-type(3) {
      animation: squishBottom 0.5s ease;
      animation-fill-mode: forwards;
      background-color: $darkestgrey;
    }
  }

  .icon-bar:nth-of-type(1) {
    animation: dissappearRev 0.5s ease;
    animation-fill-mode: forwards;
  }
  .icon-bar:nth-of-type(2) {
    animation: squishTopRev 0.5s ease;
    animation-fill-mode: forwards;
  }
  .icon-bar:nth-of-type(3) {
    animation: squishBottomRev 0.5s ease;
    animation-fill-mode: forwards;
  }
}

.header-nav-contact-box {
  position: absolute;
  bottom: 0;
  width: 100%;
  
  @media (min-width: 992px) {
    display: none;
  }
}

.header-nav-contact {
  padding: 0 60px 60px; 
  
  &-heading {
    margin-bottom: 10px;  
  }
  
  &-link {
    color: $black;
    text-transform: none;
  }
}

.header-nav-contact-shape {
  background: $white;
  height: 160px;
  border-top-left-radius: 13vw;
  width: 100%;
}


$negValue: -1.75px;

@keyframes squishBottom {
  0% {
    margin-top: 10px;
    transform: rotate(0deg);
  }
  50% {
    margin-top: $negValue;
    transform: rotate(0deg);
  }
  75% {
    margin-top: $negValue;
    transform: rotate(0deg);
  }
  100% {
    margin-top: $negValue;
    transform: rotate(-135deg);
  }
}

@keyframes squishTop {
  0% {
    margin-top: -8px;
    transform: rotate(0deg);
  }
  50% {
    margin-top: $negValue;
    transform: rotate(0deg);
  }
  75% {
    margin-top: $negValue;
    transform: rotate(0deg);
  }
  100% {
    margin-top: $negValue;
    transform: rotate(-45deg);
  }
}

@keyframes dissappear {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 1;
  }
  65% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

@keyframes squishBottomRev {
  0% {
    margin-top: $negValue;
    transform: rotate(-135deg);
  }
  50% {
    margin-top: $negValue;
    transform: rotate(0deg);
  }
  75% {
    margin-top: $negValue;
    transform: rotate(0deg);
  }
  100% {
    margin-top: 10px;
    transform: rotate(0deg);
  }
}

@keyframes squishTopRev {
  0% {
    margin-top: $negValue;
    transform: rotate(-45deg);
  }
  50% {
    margin-top: $negValue;
    transform: rotate(0deg);
  }
  75% {
    margin-top: $negValue;
    transform: rotate(0deg);
  }
  100% {
    margin-top: -8px;
    transform: rotate(0deg);
  }
}

@keyframes dissappearRev {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

